--- a/cicd/deploy/docker-compose.yml
+++ b/cicd/deploy/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   social-frontend:
-    image: registry.digitalocean.com/magnus-images/social-frontend:0.3.1
+    image: registry.digitalocean.com/magnus-images/social:frontend-0.3.1
     container_name: social-frontend
     networks:
       - social-app
