feat: initial chat implementation

--- a/package.json
+++ b/package.json
@@ -12,31 +12,36 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.4.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@types/js-cookie": "^3.0.3",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@stomp/stompjs": "^7.0.0",
     "autoprefixer": "10.4.14",
     "dayjs": "^1.11.9",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "js-cookie": "^3.0.5",
     "negotiator": "^0.6.3",
-    "next": "13.4.10",
+    "net": "^1.0.2",
+    "next": "^13.5.6",
     "next-i18next": "^14.0.0",
-    "postcss": "8.4.26",
+    "postcss": "^8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
+    "sockjs-client": "^1.6.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
     "@types/negotiator": "^0.6.1",
-    "@types/react-transition-group": "^4.4.6"
+    "@types/react-transition-group": "^4.4.6",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/js-cookie": "^3.0.3",
+    "@types/node": "20.4.2",
+    "@types/react": "18.2.15",
+    "@types/react-dom": "18.2.7",
+    "@types/stompjs": "^2.3.9"
   }
 }
