--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@stomp/stompjs": "^7.0.0",
     "autoprefixer": "10.4.14",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.9",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
@@ -34,14 +35,15 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "@types/js-cookie": "^3.0.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/negotiator": "^0.6.1",
-    "@types/react-transition-group": "^4.4.6",
-    "@types/sockjs-client": "^1.5.4",
-    "@types/js-cookie": "^3.0.3",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/react-transition-group": "^4.4.6",
+    "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9"
   }
 }
