--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "dayjs": "^1.11.9",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "jose": "^5.2.3",
     "js-cookie": "^3.0.5",
     "negotiator": "^0.6.3",
     "net": "^1.0.2",
-    "next": "^13.5.6",
+    "next": "^14.1.4",
     "next-i18next": "^14.0.0",
     "postcss": "^8.4.35",
     "react": "18.2.0",
