--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@stomp/stompjs": "^7.0.0",
     "autoprefixer": "10.4.14",
+    "color-contrast": "^1.0.0",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.9",
     "eslint": "8.45.0",
@@ -28,6 +29,7 @@
     "next-i18next": "^14.0.0",
     "postcss": "^8.4.35",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "react-redux": "^8.1.1",
     "react-transition-group": "^4.4.5",
@@ -43,6 +45,7 @@
     "@types/negotiator": "^0.6.1",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
+    "@types/react-color": "^3.0.12",
     "@types/react-dom": "18.2.7",
     "@types/react-transition-group": "^4.4.6",
     "@types/sockjs-client": "^1.5.4",
