--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "net": "^1.0.2",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
-    "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.22.3",
