--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@capacitor/core": "^5.7.4",
     "@capacitor/ios": "^5.7.4",
     "@formatjs/intl-localematcher": "^0.4.0",
-    "@reduxjs/toolkit": "^2.2.1",
+    "@reduxjs/toolkit": "^2.2.3",
     "@stomp/stompjs": "^7.0.0",
     "buffer": "^6.0.3",
     "color-contrast": "^1.0.0",
@@ -29,16 +29,16 @@
     "negotiator": "^0.6.3",
     "net": "^1.0.2",
     "postcss": "^8.4.35",
-    "react": "^18.2.0",
+    "react": "^18.3",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.1",
-    "react-router-dom": "^6.22.3",
+    "react-dom": "^18.3",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23",
     "react-transition-group": "^4.4.5",
-    "redux": "^4.2.1",
+    "redux": "^5.0.1",
     "sockjs-client": "^1.6.1",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.4"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
@@ -46,10 +46,10 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/negotiator": "^0.6.1",
     "@types/node": "20.4.2",
-    "@types/react": "^18.2.66",
+    "@types/react": "^18.3",
     "@types/react-color": "^3.0.12",
-    "@types/react-dom": "^18.2.22",
-    "@types/react-transition-group": "^4.4.5",
+    "@types/react-dom": "^18.3",
+    "@types/react-transition-group": "^4.4.10",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
